# Agrivision

./: .dockerignore  .env.example  .env.hf_spaces  .gitignore  AIRTABLE_GUIDE.md  DEPLOY_HF.md  Dockerfile  Dockerfile.hf  README.md  README_HF.md  Structure table airtable.csv  Veille.blueprint.json  api.py  enrich_scenario.py  export_airtable.py  fix_zscaler.py  main.py  pyproject.toml  requirements.txt  start_api.py  start_hf_spaces.py  sync_airtable.py  test_openai.py  test_setup.py  validate_code.py
.github/workflows/: docker.yml
FormationExistante/: Diapo Formation Démarche de Transition.pptx  VAX_Exercice_pât_tournant_VA.docx  VLX_Exercice_pât_tournant_VL_surface_limitante.docx  VLX_Exercice_pât_tournant_VL_surface_non_limitante.docx  XX_Caracteristiques_Principales_SP_Fourrageres.docx  XX_Set_Pedagogique.pptx  prop pour lancer J1 form DT .pptx
data/: 20241212_recZegxZ1wShNDyJU.md  20251114_rec2pJjT1mH271ksq.md  20251114_recA47nzmvx48okOD.md  20251117_recP2e1GxQzogRg9E.md  20251119_rec0xqwU7KoKPc81F.md  20251119_recf805BVQ0CkwYke.md  20251119_recpylMIm5yHPRCZs.md  20251119_rectMA13JAQjRBOpL.md  20251119_recx67prpD5UMBg2a.md
examples/: article_exemple.md  formation_agriculture_multidays.md  memoire.md  test_scenario.md
input/: conduite_prairies.docx  scenario.json  scenario.md
src/: __init__.py  config.py
src/enrichment/: __init__.py  scenario_enrichment.py
src/loaders/: __init__.py  airtable_loader.py  markdown_loader.py  word_loader.py
src/models/: __init__.py  pedagogical_scenario.py  scientific_article.py
src/processors/: __init__.py  (+3 more)
